# ELF_x64_to_i386_converter

./: .gitignore  CMakeLists.txt  assemblage.cc  assemblage.h  converter.cc  converter.h  elf32.cc  elf64.cc  err.cc  err.h  func_spec.cc  notes.txt  stubs.cc  tests.cc
tests/asm/: stub32to64.asm  stub64to32.asm
